PYIC-4821: Fix odd line breaks on numbered headers

--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -115,9 +115,17 @@
   text-indent: -16%;
   margin-right: 6px;
 
+  margin-top: 0;
+  vertical-align: middle;
   @include govuk-font($size: false);
 }
 
 .circle + h2 {
   display: inline-block;
+  white-space: normal;
+  vertical-align: middle;
+}
+
+.circle-header-wrapper {
+  white-space: nowrap;
 }
